-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b96
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8143118 | 9 | Goetz Lindenmaier | P4 | Resolved | Fixed | b96 |
| JDK-8149222 | 8u101 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8144183 | 8u92 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8155318 | emb-8u101 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8168603 | openjdk7u | Goetz Lindenmaier | P4 | Resolved | Fixed | master |
It seems that the ABIv2 calling convention needs different treatment for float arguments. The following native call test passes 15 float parameters, but the native code doesn’t get them correctly.
Adding 15 times 1.0f resulted in 13.0f on a LE machine. The BE machine correctly returns 15.0f.
Here is a test to reproduce the issue:
http://cr.openjdk.java.net/~goetz/webrevs/ppc64le_native_float_arg_test/
Adding 15 times 1.0f resulted in 13.0f on a LE machine. The BE machine correctly returns 15.0f.
Here is a test to reproduce the issue:
http://cr.openjdk.java.net/~goetz/webrevs/ppc64le_native_float_arg_test/
- backported by
-
JDK-8143118 PPC64LE: argument passing problem when passing 15 floats in native call
-
- Resolved
-
-
JDK-8144183 PPC64LE: argument passing problem when passing 15 floats in native call
-
- Resolved
-
-
JDK-8149222 PPC64LE: argument passing problem when passing 15 floats in native call
-
- Resolved
-
-
JDK-8155318 PPC64LE: argument passing problem when passing 15 floats in native call
-
- Resolved
-
-
JDK-8168603 PPC64LE: argument passing problem when passing 15 floats in native call
-
- Resolved
-