8139258: PPC64LE: argument passing problem when passing 15 floats in native call

Reviewed-by: mdoerr, goetz